# nmap

./: Makefile.in
.claude/skills/: porting-kit-audit  porting-kit-cflaw-scan  porting-kit-kickoff  porting-kit-module  porting-kit-oracle  porting-kit-retrospective
.github/workflows/: build.yml  nmap-rs-ci.yml
ndiff/: MANIFEST.in  ndifftest.py
nmap-rs/: DIVERGENCES.md  PLAN.md  README.md  SPIKES.md  THREAT-MODEL.md  deny.toml  m1_cflaw.json  progress.json
nmap-rs/crates/cli/: Cargo.toml
nmap-rs/crates/cli/src/: main.rs
nmap-rs/crates/cli/tests/: sv_e2e.rs
nmap-rs/crates/core/: Cargo.toml
nmap-rs/crates/core/src/: build.rs  bytes.rs  checksum.rs  classify.rs  congestion.rs  engine.rs  ipid.rs  lib.rs  log.rs  matcher.rs  model.rs  options.rs  output.rs  packet_parser.rs  parser.rs  pcre_translate.rs  ports.rs  probedb.rs  recv_validate.rs  servicescan.rs  synscan.rs  targets.rs  timing.rs  trace.rs  udpscan.rs  versioninfo.rs
nmap-rs/crates/core/src/headers/: arp.rs  ethernet.rs  icmpv4.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  udp.rs
nmap-rs/crates/core/tests/: arp_differential.rs  build_differential.rs  classify_differential.rs  ethernet_differential.rs  icmpv4_differential.rs  ipid_differential.rs  ipv4_differential.rs  ipv6_differential.rs  matcher_corpus.rs  packet_differential.rs  pcre_translate_corpus.rs  probedb_corpus.rs  tcp_differential.rs  udp_differential.rs  validate_differential.rs  versioninfo_corpus.rs
nmap-rs/crates/sys/: Cargo.toml
nmap-rs/crates/sys/src/: capture.rs  lib.rs  net.rs  netif.rs  rawio.rs  route.rs  scan.rs  servicescan.rs  synscan.rs  udpscan.rs
nmap-rs/crates/sys/src/capture/: pcap_source.rs
nmap-rs/crates/sys/src/netif/: ffi.rs
nmap-rs/crates/sys/src/rawio/: pcap_sender.rs
nmap-rs/crates/sys/tests/: rawio_capture_e2e.rs  synscan_e2e.rs  udpscan_e2e.rs
nmap-rs/docs/: M3-ANALYSIS.md  M4-ANALYSIS.md  service_probes_regex_census.py
nmap-rs/fuzz/: .gitignore  Cargo.toml
nmap-rs/fuzz/fuzz_targets/: build_packet.rs  classify.rs  ipid.rs  match_syn.rs  match_udp.rs  matcher.rs  parse_arp.rs  parse_ethernet.rs  parse_icmpv4.rs  parse_ipv4.rs  parse_ipv6.rs  parse_packet.rs  parse_port_spec.rs  parse_target.rs  parse_tcp.rs  parse_udp.rs  pcre_translate.rs  services_parse.rs  services_probes_parse.rs  validate_packet.rs  versioninfo.rs
nmap-rs/fuzz/seeds/build_packet/: icmp_echo  tcp_small  udp_small
nmap-rs/fuzz/seeds/classify/: syn_synack  udp_portunreach
nmap-rs/fuzz/seeds/ipid/: incr  rd
nmap-rs/fuzz/seeds/matcher/: backref_fancy  binary  empty_banner  ftp  redos_attempt  ssh
nmap-rs/fuzz/seeds/parse_arp/: broadcast  disc_addr_lens  disc_hwtype_proto  disc_opcode_hi  padded  rarp_request  reply  request  twentyseven
nmap-rs/fuzz/seeds/parse_ethernet/: arp_type  eth_ip_icmp_portunreach  ipv6_type  thirteen
nmap-rs/fuzz/seeds/parse_icmpv4/: echo  echo_reply  hostile_type  port_unreach  regression-timestamp-8byte-serialize  seven_bytes  timestamp20  timestamp_short
nmap-rs/fuzz/seeds/parse_ipv4/: eth_ip_tcp_rst  eth_ip_tcp_syn  eth_ip_tcp_synack  eth_ip_udp  eth_ipv6_tcp  icmp_hostile_type_abort  ipv4_ihl_0  ipv4_ihl_15_no_opts  ipv4_totlen_overflow  ipv4_totlen_underflow  trunc_eth_only  trunc_icmp_1byte  trunc_ip_no_l4  trunc_tcp_half  udp_maxlen_cksum_trigger
nmap-rs/fuzz/seeds/parse_ipv6/: from_corpus_eth  hlim1  hopbyhop  icmpv6  tc_flow_set  tcp  thirtynine  udp
nmap-rs/fuzz/seeds/parse_packet/: eth_arp  eth_ipv4_in_ipv4_tcp  eth_ipv4_tcp  eth_ipv6_udp  ip_bare_arp  ip_ipv4_icmp_unreach  ip_ipv6_tcp
nmap-rs/fuzz/seeds/parse_port_spec/: names-mixed  proto-prefixes  range
nmap-rs/fuzz/seeds/parse_target/: octet-wild  range
nmap-rs/fuzz/seeds/parse_tcp/: bare_syn  eth_ip_tcp_rst  eth_ip_tcp_syn  eth_ip_tcp_synack  nineteen  off15_exceeds  off4_invalid  rst_ack  synack  trunc_tcp_half  with_mss_opts
nmap-rs/fuzz/seeds/parse_udp/: bare_hdr  dns_query  eth_ip_udp  seven_bytes  with_payload
nmap-rs/fuzz/seeds/pcre_translate/: bare_brace  bracket_classes  leading_brackets  null_escape  quantifiers_and_octal  realistic
nmap-rs/fuzz/seeds/services_parse/: malformed-then-valid  valid
nmap-rs/fuzz/seeds/services_probes_parse/: bytes_and_fallback  crash_multibyte_delim_regression  exclude_udp_soft  full_probe  malformed  null_probe
nmap-rs/fuzz/seeds/validate_packet/: reject_opt_overrun  tcp_mss_sackok_nop_wscale  udp_plain
nmap-rs/fuzz/seeds/versioninfo/: cpe  int_be  plain  printable  subst  subst_escape
nmap-rs/spikes/pcap-async/: Cargo.toml
nmap-rs/spikes/pcap-async/src/: main.rs
nmap-rs/spikes/regex-census/: Cargo.toml
nmap-rs/spikes/regex-census/src/: main.rs
nmap-rs/tests/differential/: README.md  mvp-matrix.toml  project.py  run_differential.sh
porting-kit/: ARCHITECTURE-TEMPLATE.md  C-to-Rust-Playbook-Best-of-Both.md  CLAUDE.md  LESSONS.md  OPERATING-GUIDE.md  PLAYBOOK.md  README.md  RETROSPECTIVE-lsof.md  SECURITY-CHECKLIST.md
porting-kit/PROMPTS/: 00-new-port-kickoff.md  10-module-port.md  90-retrospective.md
porting-kit/harnesses/c-flaw-scan/: scan_c_flaws.py
porting-kit/harnesses/ci/: porting-ci.template.yml
porting-kit/harnesses/differential/: diff_run.py  input-matrix.example.toml  normalize.py
porting-kit/harnesses/fuzz/: fuzz_target.template.rs  gen_fuzz_target.sh
porting-kit/harnesses/golden/: golden.py
porting-kit/harnesses/progress/: progress.py
porting-kit/harnesses/sanitizers/: run_sanitizers.sh
porting-kit/harnesses/supply-chain/: run_supply_chain.sh
porting-kit/harnesses/unsafe-audit/: audit_unsafe.py
porting-kit/scripts/: lift-to-c2rust-port.sh
porting-kit/skeleton/: Cargo.toml  DIVERGENCES.md  THREAT-MODEL.md  rust-toolchain.toml
porting-kit/skeleton/crates/cli/: Cargo.toml
porting-kit/skeleton/crates/cli/src/: main.rs
porting-kit/skeleton/crates/core/: Cargo.toml
porting-kit/skeleton/crates/core/src/: lib.rs  model.rs  parser.rs
porting-kit/skeleton/crates/sys/: Cargo.toml
porting-kit/skeleton/crates/sys/src/: lib.rs
porting-kit/skills/: README.md  check_skills.py
porting-kit/skills/porting-kit-audit/: SKILL.md
(+222 files in other folders)
