# cargo-fuzz crate for nmap-rs. Detached from the main workspace (its own empty
# [workspace] table) so the stable `cargo build`/`clippy`/`test` gates never try
# to compile the nightly-only libfuzzer runtime, and `cargo fuzz` resolves this
# as its own root. Fuzzes the M1 untrusted-input parsers in nmap-core:
#   parse_target      — CLI target/host/CIDR spec        (targets.rs)
#   parse_port_spec   — -p port spec grammar             (ports.rs)
#   services_parse    — nmap-services file parser        (ports.rs)
# Contract: none of these may panic/abort/OOM on arbitrary bytes (Phase 4 gate 3).
[package]
name = "nmap-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nmap-core]
path = "../crates/core"

# Detach from the parent workspace: fuzz builds on nightly with a distinct
# dependency set and must not be pulled into the stable workspace gates.
[workspace]

# Fuzz targets deliberately do not inherit the workspace release profile; keep
# overflow-checks on so an arithmetic overflow surfaces as a fuzz crash, not
# silent wraparound.
[profile.release]
overflow-checks = true
debug = 1

[[bin]]
name = "parse_target"
path = "fuzz_targets/parse_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_port_spec"
path = "fuzz_targets/parse_port_spec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "services_parse"
path = "fuzz_targets/services_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "services_probes_parse"
path = "fuzz_targets/services_probes_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pcre_translate"
path = "fuzz_targets/pcre_translate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "matcher"
path = "fuzz_targets/matcher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "versioninfo"
path = "fuzz_targets/versioninfo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_ipv4"
path = "fuzz_targets/parse_ipv4.rs"
test = false

[[bin]]
name = "parse_tcp"
path = "fuzz_targets/parse_tcp.rs"
test = false

[[bin]]
name = "parse_udp"
path = "fuzz_targets/parse_udp.rs"
test = false

[[bin]]
name = "parse_icmpv4"
path = "fuzz_targets/parse_icmpv4.rs"
test = false

[[bin]]
name = "parse_ethernet"
path = "fuzz_targets/parse_ethernet.rs"
test = false

[[bin]]
name = "parse_arp"
path = "fuzz_targets/parse_arp.rs"
test = false

[[bin]]
name = "parse_ipv6"
path = "fuzz_targets/parse_ipv6.rs"
test = false

[[bin]]
name = "parse_packet"
path = "fuzz_targets/parse_packet.rs"
test = false

[[bin]]
name = "build_packet"
path = "fuzz_targets/build_packet.rs"
test = false

[[bin]]
name = "validate_packet"
path = "fuzz_targets/validate_packet.rs"
test = false

[[bin]]
name = "classify"
path = "fuzz_targets/classify.rs"
test = false

[[bin]]
name = "ipid"
path = "fuzz_targets/ipid.rs"
test = false
