[package]
name = "nmap-cli"
version = "0.1.0"
publish = false          # application crate; never published to crates.io
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Binary is `nmap-rs` so it coexists with the C `nmap` during the port (the C
# tree stays runnable as the differential oracle through cutover).
[[bin]]
name = "nmap-rs"
path = "src/main.rs"

[dependencies]
nmap-core = { path = "../core" }
nmap-sys = { path = "../sys" }
# Async runtime to drive the scan; the socket/DNS primitives live in nmap-sys.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
# Enable the privileged raw scans (`-sS`/`-sU`) by pulling in the libpcap/Npcap
# capture backend. Off by default so the connect-scan build needs no libpcap at
# build time; without it, `-sS`/`-sU` warn and fall back to the connect scan.
pcap = ["nmap-sys/pcap"]

[lints]
workspace = true
