[package]
name = "nmap-core"
version = "0.1.0"
publish = false          # application crate; never published to crates.io
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# No dependencies by default. Every dependency added here must clear the
# supply-chain gate (porting-kit/harnesses/supply-chain). Keep the trusted
# surface small. `core` is #![forbid(unsafe_code)] — all pure nmap logic lives
# here (target expansion, port/service parsing, model, timing math, rendering).
[dependencies]

# Test-only: `core::pcre_translate` is a pure string transform with no runtime
# dependency, but its tests verify that each rewrite actually compiles in the
# engine the matcher will use. `core::matcher` (the next module) promotes this to
# a real dependency. Dev-deps still clear the supply-chain gate.
[dev-dependencies]
regex = "1"

[lints]
workspace = true
