[package]
name = "nmap-core"
version = "0.1.0"
publish = false          # application crate; never published to crates.io
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Keep the trusted surface small. Every dependency added here must clear the
# supply-chain gate (porting-kit/harnesses/supply-chain). `core` is
# #![forbid(unsafe_code)] — the crates below expose safe APIs; their internal
# unsafe is their own audited concern, not reachable from this crate's code.
[dependencies]
# `core::matcher` — the hybrid service-detection regex engine. `regex` is the
# finite-automaton default (linear-time, ReDoS-immune); `fancy-regex` is the
# bounded-backtracking fallback for the ~6% of probes that need lookaround /
# backreferences / atomic groups (its backtrack limit is the analog of nmap's
# PCRE2 match_limit). See docs/M3-ANALYSIS.md for why this split.
regex = "1"
fancy-regex = "0.13"

[lints]
workspace = true
