[package]
name = "nmap-sys"
version = "0.1.0"
publish = false          # application crate; never published to crates.io
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The ONLY crate permitted `unsafe`. FFI bindings (Npcap, the `windows` crate)
# land here later, each wrapped in an audited safe fn; the unsafe-audit harness
# runs against this crate in CI and HARD-FAILS on any undocumented block. For the
# MVP (connect scan) this crate is expected to hold ~0 unsafe.
[dependencies]
nmap-core = { path = "../core" }
# Interface / route / MTU enumeration — the DEFAULT backend. `netdev` is a vetted,
# cross-platform (Windows/Linux/macOS) crate whose own OS-specific `unsafe` is
# audited upstream, so THIS crate stays at 0 `unsafe` for the whole OS-query layer.
# It supplies exactly the fields the raw send path needs (per-address prefix, MTU,
# MAC, default gateway) — safer and more complete than hand-rolling `getifaddrs` /
# `GetAdaptersAddresses` ourselves. `unsafe` is thus reserved for Npcap, where no
# safe equivalent exists.
netdev = "0.45"
# Async runtime + safe socket API for the connect scan. tokio's networking is a
# safe wrapper over the OS (Winsock/IOCP on Windows, epoll/kqueue elsewhere), so
# this crate still holds ~0 unsafe for the MVP. Feature set kept minimal.
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
# Real packet-capture / injection backend (feature `pcap`). Wraps libpcap on Unix and
# Npcap on Windows — the same library nmap uses — behind a mostly-safe API whose FFI
# is audited upstream. Optional because it needs libpcap/Npcap headers at BUILD time,
# which the default CI image lacks; the `capture` seam + async plumbing build and test
# without it.
pcap = { version = "2", optional = true }

[features]
default = []
# The hand-FFI ESCAPE HATCH (Option C). Off by default. Enables a direct
# `getifaddrs(3)` backend (`interfaces_ffi`) used to (a) cross-check that `netdev`
# agrees with the raw OS call, and (b) reach a field `netdev` might not expose. The
# only place `unsafe` re-enters the OS-query layer, and always audited.
raw-ffi = ["dep:libc"]
# The real libpcap/Npcap capture backend. Off by default (needs libpcap at build
# time). The OS-agnostic capture plumbing (blocking-thread -> tokio mpsc, per spike
# S1) is always built and tested against a mock source; this feature swaps in the
# live source, validated on a privileged host.
pcap = ["dep:pcap"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[lints]
workspace = true
