[package]
name = "core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# No dependencies by default. Every dependency added here must clear the
# supply-chain gate (harnesses/supply-chain). Keep the trusted surface small.
[dependencies]

[lints]
workspace = true
