[package]
name = "sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The ONLY crate permitted `unsafe`. FFI bindings (libc, windows-sys, nix, a
# -sys crate) go here, each wrapped in an audited safe function. The unsafe-audit
# harness runs against this crate in CI and HARD-FAILS on any undocumented block.
[dependencies]
core = { path = "../core" }

[lints]
workspace = true
